fix failling test